--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   shared_preferences: ^2.5.3
   get_time_ago:
   url_launcher: ^6.3.1
+  flutter_bloc: ^9.1.1
 
 dev_dependencies:
   flutter_test:
