--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   get_time_ago:
   url_launcher: ^6.3.1
   flutter_bloc: ^9.1.1
+  connectivity_plus: ^6.1.4
+  hive: ^2.2.3
+  path_provider: ^2.1.5
 
 dev_dependencies:
   flutter_test:
